Fix ribbon gap

--- a/sass/events/_draganddrop.scss
+++ b/sass/events/_draganddrop.scss
@@ -13,6 +13,7 @@
 
 
 #clone {
+    position:absolute;
 	color: $verdeoscurogrisaceo;
 	border: 2px dashed $verdeoscurogrisaceo;
 	background-color: white;
